src/objects/Document_Checklist__c.object
<CustomObject>
    <description>Document Checklist stores the list of documents that were rejected during the document verification process.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Values</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Checklist_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Checklist Header</label>
        <referenceTo>Document_Checklist_Header__c</referenceTo>
        <relationshipLabel>Document Checklists</relationshipLabel>
        <relationshipName>Document_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejection_Remarks__c</fullName>
        <description>Rejection Remarks</description>
        <label>Rejection Remarks</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Checklist</label>
    <nameField>
        <label>Document Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Checklists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>